[gd_scene load_steps=23 format=3 uid="uid://b0w6mv2us6hhb"]

[ext_resource type="Script" path="res://cat/Cat_new.gd" id="1_ivns0"]
[ext_resource type="Texture2D" uid="uid://bhpp1lgfmy537" path="res://cat/assets/jump/player-jump-2.png" id="2_d4mx8"]
[ext_resource type="Texture2D" uid="uid://cvkhafeme6udv" path="res://cat/assets/idle/player-idle-1.png" id="3_br2y8"]
[ext_resource type="PackedScene" uid="uid://c0fr2eajw41q6" path="res://cat/component/animation_component.tscn" id="3_ycjgg"]
[ext_resource type="PackedScene" uid="uid://p1v2ehekli0j" path="res://cat/component/gravity_component.tscn" id="4_n2p5r"]
[ext_resource type="Texture2D" uid="uid://dm3fogpvopyty" path="res://cat/assets/idle/player-idle-2.png" id="4_x5h0t"]
[ext_resource type="Texture2D" uid="uid://clkcv6cbdwe4x" path="res://cat/assets/idle/player-idle-3.png" id="5_itcrq"]
[ext_resource type="PackedScene" uid="uid://cxngxmghspqes" path="res://cat/component/input_component.tscn" id="5_ymwxj"]
[ext_resource type="Texture2D" uid="uid://bienngd1501f5" path="res://cat/assets/idle/player-idle-4.png" id="6_37320"]
[ext_resource type="Texture2D" uid="uid://26gdqlgsyu1b" path="res://cat/assets/jump/player-jump-1.png" id="7_6t186"]
[ext_resource type="PackedScene" uid="uid://buvqtqvjs7xyd" path="res://cat/component/movement_component.tscn" id="7_keotf"]
[ext_resource type="Texture2D" uid="uid://cwcypebh1eoj3" path="res://cat/assets/run/player-run-1.png" id="8_l3jsa"]
[ext_resource type="Texture2D" uid="uid://dmr462vqdajh8" path="res://cat/assets/run/player-run-2.png" id="9_njkgm"]
[ext_resource type="Texture2D" uid="uid://ccwlh01c65j3j" path="res://cat/assets/run/player-run-3.png" id="10_1dbkp"]
[ext_resource type="Texture2D" uid="uid://bfi6spb43t4et" path="res://cat/assets/run/player-run-4.png" id="11_5dkjp"]
[ext_resource type="Texture2D" uid="uid://5k8l0w6i6xr7" path="res://cat/assets/run/player-run-5.png" id="12_2ge5l"]
[ext_resource type="Texture2D" uid="uid://jg4nlm3rha23" path="res://cat/assets/run/player-run-6.png" id="13_hbak1"]
[ext_resource type="PackedScene" uid="uid://bhlxu1n4brs8g" path="res://cat/component/action_component.tscn" id="18_fgw5n"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eitv2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d4mx8")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_br2y8")
}, {
"duration": 1.0,
"texture": ExtResource("4_x5h0t")
}, {
"duration": 1.0,
"texture": ExtResource("5_itcrq")
}, {
"duration": 1.0,
"texture": ExtResource("6_37320")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_6t186")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_l3jsa")
}, {
"duration": 1.0,
"texture": ExtResource("9_njkgm")
}, {
"duration": 1.0,
"texture": ExtResource("10_1dbkp")
}, {
"duration": 1.0,
"texture": ExtResource("11_5dkjp")
}, {
"duration": 1.0,
"texture": ExtResource("12_2ge5l")
}, {
"duration": 1.0,
"texture": ExtResource("13_hbak1")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v3a83"]
radius = 64.0
height = 134.0

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_slokh"]
points = PackedVector2Array(0, 0, -80, -50, -140, -50, -140, 50, -80, 50)

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_n6ff0"]
points = PackedVector2Array(0, 0, 80, -50, 140, -50, 140, 50, 80, 50)

[node name="CatNew" type="CharacterBody2D" node_paths=PackedStringArray("input_component", "gravity_component", "movement_component", "animation_component", "action_component")]
collision_layer = 2
script = ExtResource("1_ivns0")
input_component = NodePath("InputComponent")
gravity_component = NodePath("GravityComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
action_component = NodePath("ActionComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_eitv2")
animation = &"fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v3a83")

[node name="InputComponent" parent="." instance=ExtResource("5_ymwxj")]

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_ycjgg")]
sprite = NodePath("../AnimatedSprite2D")

[node name="GravityComponent" parent="." instance=ExtResource("4_n2p5r")]

[node name="MovementComponent" parent="." instance=ExtResource("7_keotf")]

[node name="ActionComponent" parent="." node_paths=PackedStringArray("left_hit_cast", "right_hit_cast") instance=ExtResource("18_fgw5n")]
hit_force = Vector2(50000, 0)
left_hit_cast = NodePath("../LeftHitShapeCast")
right_hit_cast = NodePath("../RightHitShapeCast")

[node name="LeftHitShapeCast" type="ShapeCast2D" parent="."]
enabled = false
shape = SubResource("ConvexPolygonShape2D_slokh")
target_position = Vector2(0, 0)
collision_mask = 520

[node name="RightHitShapeCast" type="ShapeCast2D" parent="."]
enabled = false
shape = SubResource("ConvexPolygonShape2D_n6ff0")
target_position = Vector2(0, 0)
collision_mask = 520
